--- a/grams/templates/history.html
+++ b/grams/templates/history.html
@@ -8,7 +8,7 @@
 {% block content %}
     <section id="main" class="content">
         <div class="titlepage" style="margin-bottom: 15px">
-            <h1>Queued Transactions</h1>
+            <h1>Historical Transactions</h1>
         </div>
 
         <div style="overflow-x:auto;"> 
