--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -160,15 +160,14 @@
                                 <div class="col-1-sm">
                                     {% if trail.ttype == '1' %}
                                         <i class="far fa-clock"></i>
-                                    {% endif %}
-                                    {% if trail.ttype == '2' %}
+                                    {% elif trail.ttype == '2' %}
                                         <i class="fas fa-exchange-alt"></i>
-                                    {% endif %}
-                                    {% if trail.ttype == '3' %}
+                                    {% elif trail.ttype == '3' %}
                                         <i class="far fa-trash-alt"></i>
-                                    {% endif %}
-                                    {% if trail.ttype == '4' %}
+                                    {% elif trail.ttype == '4' %}
                                         <i class="fas fa-undo-alt"></i>
+                                    {% elif trail.ttype == '5' %}
+                                        <i class="far fa-flag"></i>
                                     {% endif %}
                                 </div>
                                 <div class="col">
@@ -178,11 +177,39 @@
                             <div class="row">
                                 <ul>
                                     <li class="date">
-                                        {{ trail.date_added }}
+                                        <a href="{% url 'transaction-view' trail.id %}">{{ trail.date_added }}</a>
                                     </li>
                                     <li class="neutral">
                                         transaction#{{ trail.id }}
                                     </li>
+
+                                    {% if trail.status == '1' %}
+                                        <li class="critical">On-going</li>
+                                    {% elif trail.status == '2' %}
+                                        <li class="low">Completed</li>
+                                    {% endif %}
+
+                                    {% if trail.ttype == '1' %}
+                                        {% for asset in trail.assets_transact.all  %}
+                                            <li class="neutral">asset#{{ asset.id }}</li>
+                                        {% endfor %}
+                                    {% elif trail.ttype == '2' %}
+                                        {% for asset in trail.assets_transact.all  %}
+                                            <li class="neutral">asset#{{ asset.id }}</li>
+                                        {% endfor %}
+                                    {% elif trail.ttype == '3' %}
+                                        {% for asset in trail.assets_transact.all  %}
+                                            <li class="neutral">asset#{{ asset.id }}</li>
+                                        {% endfor %}
+                                    {% elif trail.ttype == '4' %}
+                                        {% for asset in trail.archived_assets.all  %}
+                                            <li class="neutral">asset#{{ asset.id }}</li>
+                                        {% endfor %}
+                                    {% elif trail.ttype == '5' %}
+                                        {% for asset in trail.assets_transact.all  %}
+                                            <li class="neutral">asset#{{ asset.id }}</li>
+                                        {% endfor %}
+                                    {% endif %}
                                 </ul>
                             </div>
                         </div>
