--- a/grams/templates/assetbrandview.html
+++ b/grams/templates/assetbrandview.html
@@ -59,7 +59,7 @@
                     <i class="fas fa-chart-line"></i>&nbsp; Assets
                 </h2>
                 
-                <table id = "myTable" class="table table-striped">
+                <table class="table table-striped" id = "myTable">
                     <thead>
                         <th>ID</th>
                         <th>Name</th>
