--- a/grams/templates/addcompany.html
+++ b/grams/templates/addcompany.html
@@ -11,7 +11,7 @@
     <div class="titlepage">
         <ul class="breadcrumb">
             <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
-            <li class="active">Add Branch</a></li>
+            <li class="active">Add Company</a></li>
           </ul>
     </div>
 
