--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -140,7 +140,7 @@
                     </div>
                 <!-- end manage menu -->
 
-                <!-- admin -->
+                <!-- admin
                 <a href="#admin" class="dropdown-btn"><i class="fas fa-unlock-alt sidecon"></i> Administrator <i class="fas fa-angle-down"></i></a>
                 <div class="dropdown-container">
                     <a href="#"  class="dropdown-btn"><i class="fas fa-users incon"></i> Users <i class="fas fa-angle-down"></i></a>
@@ -150,7 +150,9 @@
                         </div>
                     <a href="#"><i class="fas fa-solar-panel incon"></i> Panel</a>
                     <a href="generate.html"><i class="far fa-hdd incon"></i> Generate Backup</a>
-                </div>
+                </div> -->
+
+                <a href="/admin/" class="dropdown-btn"><i class="fas fa-unlock-alt sidecon"></i> Admin Panel</a>
             </div>
 
         {% block content %}{% endblock content %}
