--- a/grams/static/login.css
+++ b/grams/static/login.css
@@ -66,10 +66,10 @@
         .login input[type=submit] {
             float: left;
             max-width: 80px;
-            /*margin-top: 15px;*/
             background-color: #43A047;
             color: #ffffff;
             border: none;
+            padding: 5px;
             box-shadow: 0px 1px 3px -2px #616161;
         }
 
@@ -79,7 +79,7 @@
 
             .login input[type=submit]:focus {
                 background-color: #388E3C;
-                box-shadow: none;
+                box-shadow: none;                
             }
 
 
