--- a/grams/templates/login.html
+++ b/grams/templates/login.html
@@ -28,7 +28,7 @@
                 <form method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <input type="submit" value="Log In">
+                    <input class="btn" type="submit" value="Log In">
                 </form>
                 <!--
                 <div class="addLink">
