--- a/grams/templates/addasset.html
+++ b/grams/templates/addasset.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-<!--{% load crispy_forms_tags %}-->
+{% load crispy_forms_tags %}
 {% block page_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'forms.css' %}">
+    <!--<link rel="stylesheet" href="{% static 'forms.css' %}">-->
     <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
 {% endblock page_css %}
 
@@ -19,7 +19,7 @@
         <div class="form-control tablebox-container">
             <form method="POST" action="">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form|crispy }}
                 <input type="submit" value="Save">
                 <input type="reset" value="Reset">
             </form>
