--- a/grams/templates/addcompany.html
+++ b/grams/templates/addcompany.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block page_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'forms.css' %}">
     <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
 {% endblock page_css %}
 
@@ -19,8 +18,9 @@
         <div class="form-control tablebox-container">
             <form method="POST" action="">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" value="Save">
+                {{ form|crispy }}
+                <input class="btn neutral" type="submit" value="New Company">
+                <input class="btn low" type="reset" value="Clear">
             </form>
         </div>
     </div>
