--- a/grams/templates/editvendor.html
+++ b/grams/templates/editvendor.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'forms.css' %}">
@@ -22,9 +22,9 @@
         <div class="form-control tablebox-container">
             <form method="POST" action="">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" value="Save">
-                <input type="reset" value="Reset">
+                {{ form|crispy }}
+                <input class="btn neutral" type="submit" value="Save">
+                <input class="btn low" type="reset" value="Clear">
             </form>
         </div>
     </div>
