--- a/grams/templates/addasset.html
+++ b/grams/templates/addasset.html
@@ -2,7 +2,6 @@
 {% load crispy_forms_tags %}
 {% block page_css %}
     {% load static %}
-    <!--<link rel="stylesheet" href="{% static 'forms.css' %}">-->
     <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
 {% endblock page_css %}
 
@@ -20,8 +19,8 @@
             <form method="POST" action="">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <input type="submit" value="Save">
-                <input type="reset" value="Reset">
+                <input class="btn neutral" type="submit" value="New Asset">
+                <input class="btn low" type="reset" value="Clear">
             </form>
         </div>
     </div>
