--- a/grams/templates/addassetbrand.html
+++ b/grams/templates/addassetbrand.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block page_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'forms.css' %}">
     <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
 {% endblock page_css %}
 
@@ -18,12 +17,10 @@
     <div class="row">
         <div class="form-control tablebox-container">
             <form method="POST" action="">
-                    <form method="POST" action="">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <input type="submit" value="Save">
-                        <input type="reset" value="Reset">
-                    </form>
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input class="btn neutral" type="submit" value="Add to Asset Brands">
+                <input class="btn low" type="reset" value="Clear">
             </form>
         </div>
     </div>
