--- a/grams/templates/addassetcategory.html
+++ b/grams/templates/addassetcategory.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block page_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'forms.css' %}">
     <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
 {% endblock page_css %}
 
@@ -20,9 +19,9 @@
             <form method="POST" action="">
 
                 {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" value="Save">
-                <input type="reset" value="Reset">
+                {{ form|crispy }}
+                <input class="btn neutral" type="submit" value="New Asset Category">
+                <input class="btn low" type="reset" value="Clear">
             </form>
         </div>
     </div>
