--- a/grams/templates/dispose.html
+++ b/grams/templates/dispose.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'tables.css' %}">
-    <link rel="stylesheet" href="{% static 'forms.css' %}">
     <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
 {% endblock page_css %}
 
@@ -20,10 +19,9 @@
             <div class="form-control tablebox-container">
                 <form method="POST" action="">
                     {% csrf_token %}
-                    {{ form.as_p }}
-                    
-                    <input type="submit" value="Save">
-                    <input type="reset" value="Reset">
+                    {{ form|crispy }}
+                    <input class="btn neutral" type="submit" value="Dispose">
+                    <input class="btn low" type="reset" value="Clear">
                 </form>
             </div>
         </div>
