--- a/grams/templates/editcompany.html
+++ b/grams/templates/editcompany.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'forms.css' %}">
@@ -20,8 +20,9 @@
 
     <form method="POST" action="">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Save">
+        {{ form|crispy }}
+        <input class="btn neutral" type="submit" value="Save">
+        <input class="btn low" type="reset" value="Clear">
     </form>
 
 </section>
