--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="{% static 'view.css' %}">
     <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
     <link rel="stylesheet" type="text/css" 
-    href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+        href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css"
-    href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css">
+        href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css">
     <link rel="stylesheet" type="text/css" 
-    href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.18/af-2.3.0/b-1.5.2/b-colvis-1.5.2/b-flash-1.5.2/b-html5-1.5.2/b-print-1.5.2/cr-1.5.0/fh-3.1.4/r-2.2.2/datatables.min.css"/>
+        href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.18/af-2.3.0/b-1.5.2/b-colvis-1.5.2/b-flash-1.5.2/b-html5-1.5.2/b-print-1.5.2/cr-1.5.0/fh-3.1.4/r-2.2.2/datatables.min.css"/>
 {% endblock page_css %}
 {% block content %}
 <section id="main" class="content">
@@ -233,6 +233,31 @@
 </section>
 
 {% block js %}
+    <script type="text/javascript">
+        $(document).ready( function () {
+            $('#myTable').DataTable({
+                dom: 'Bfrtip',
+                buttons: [
+                    { extend: 'copy',  className: 'copy'},  
+                    { extend: 'csv', className: 'csv'},  
+                    { extend: 'excel', className: 'excel'},  
+                    { extend: 'pdf',  className: 'pdf'},  
+                    { extend: 'print', className: 'print'} 
+                ]
+            });
+        } );
+    </script>
+    
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#myTable tr').click(function() {
+            var href = $(this).find("a").attr("href");
+                if(href) {
+                    window.location = href;
+                    }
+                });
+        });  
+    </script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
