--- a/grams/static/styles.css
+++ b/grams/static/styles.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800');
 
 ::-webkit-scrollbar {width: 5px;}
-::-webkit-scrollbar-track {background: #f1f1f1;}
+::-webkit-scrollbar-track {background: #66BB6A;}
 ::-webkit-scrollbar-thumb {background: #1B5E20;}
 
 *:focus {
