--- a/grams/templates/assetcategory.html
+++ b/grams/templates/assetcategory.html
@@ -24,7 +24,9 @@
         </form>
     </div>
 
+    {% if soft_auth != 'General User' %}
     <a href="{% url 'asset-categories-add' %}" class="btn neutral add-btn">Add</a>
+    {% endif %}
     
     <div style="overflow-x:auto;"> 
         <table class="table table-striped" id="myTable"> 
