--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -98,17 +98,23 @@
                 <a href="#asset" class="dropdown-btn"><i class="fas fa-cubes sidecon"></i> Asset <i class="fas fa-angle-down"></i></a>
                 <div class="dropdown-container">
                     <a href="{% url 'asset-table' %}"><i class="fas fa-table incon"></i> Display All</a>
-                    <a href="{% url 'asset-add' %}"><i class="fas fa-plus incon"></i> Add</a>
+                    {% if soft_auth != 'General User' %}
+                        <a href="{% url 'asset-add' %}"><i class="fas fa-plus incon"></i> Add</a>
+                    {% endif %}
                     <a href="{% url 'archived-assets-table' %}"><i class="far fa-trash-alt incon"></i></i> Archive</a>
                     <a href="#" class="dropdown-btn"><i class="fas fa-th-large incon"></i> Categories <i class="fas fa-angle-down"></i></a>
                     <div class="dropdown-container">
                         <a href="{% url 'asset-categories-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                        <a href="{% url 'asset-categories-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                        {% if soft_auth != 'General User' %}
+                            <a href="{% url 'asset-categories-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                        {% endif %}
                     </div>
                     <a href="#" class="dropdown-btn"><i class="fas fa-tags incon"></i> Brands <i class="fas fa-angle-down"></i></a>
                     <div class="dropdown-container">
                         <a href="{% url 'asset-brands-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                        <a href="{% url 'asset-brands-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                        {% if soft_auth != 'General User' %}
+                            <a href="{% url 'asset-brands-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                        {% endif %}
                     </div>
                 </div>
                 <!-- end asset menu -->
@@ -116,11 +122,13 @@
                 <!-- start transactions menu -->
                 <a href="#transactions" class="dropdown-btn"><i class="fas fa-random sidecon"></i> Transactions <i class="fas fa-angle-down"></i></a>
                 <div class="dropdown-container">
-                    <a href="{% url 'schedule-maintenance' %}"><i class="far fa-clock incon"></i></i> Maintenance</a>
-                    <a href="{% url 'transfer-asset' %}"><i class="fas fa-people-carry incon"></i> Transfer</a>
-                    <a href="{% url 'dispose-asset' %}"><i class="far fa-trash-alt incon"></i> Dispose/Archive</a>
-                    <a href="{% url 'recover-asset' %}"><i class="fas fa-redo-alt incon"></i> Recover</a>
-                    <a href="{% url 'defective-asset' %}"><i class="far fa-flag incon"></i> Report Defective</a>
+                    {% if soft_auth != 'General User' %}
+                        <a href="{% url 'schedule-maintenance' %}"><i class="far fa-clock incon"></i></i> Maintenance</a>
+                        <a href="{% url 'transfer-asset' %}"><i class="fas fa-people-carry incon"></i> Transfer</a>
+                        <a href="{% url 'dispose-asset' %}"><i class="far fa-trash-alt incon"></i> Dispose/Archive</a>
+                        <a href="{% url 'recover-asset' %}"><i class="fas fa-redo-alt incon"></i> Recover</a>
+                        <a href="{% url 'defective-asset' %}"><i class="far fa-flag incon"></i> Report Defective</a>
+                    {% endif %}
                     <a href="{% url 'transactions-table' %}"><i class="far fa-calendar-alt incon"></i> Queue</a>
                     <a href="{% url 'transactions-history' %}"><i class="fas fa-history incon"></i> History</a>
                 </div>
@@ -132,37 +140,31 @@
                         <a href="#"  class="dropdown-btn"><i class="fas fa-utensils incon"></i> Branches <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
                             <a href="{% url 'branch-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                            <a href="{% url 'branch-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            {% if soft_auth != 'General User' %}
+                                <a href="{% url 'branch-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            {% endif %}
                             <a href="{% url 'branch-table-archive' %}" style="margin-left: 20px;"><i class="far fa-trash-alt incon"></i></i> Archive</a>
                         </div>
                         <a href="#"  class="dropdown-btn"><i class="fas fa-building incon"></i> Companies <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
                             <a href="{% url 'company-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                            <a href="{% url 'company-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            {% if soft_auth != 'General User' %}
+                                <a href="{% url 'company-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            {% endif %}
                             <a href="{% url 'archive-company-table' %}" style="margin-left: 20px;"><i class="far fa-trash-alt incon"></i></i> Archive</a>
                         </div>
                         <a href="#"  class="dropdown-btn"><i class="fas fa-wrench incon"></i> Vendors <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
                             <a href="{% url 'vendors-table'%}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                            <a href="{% url 'vendors-add'%}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            {% if soft_auth != 'General User' %}
+                                <a href="{% url 'vendors-add'%}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            {% endif %}
                             <a href="{% url 'archive-vendors-table' %}" style="margin-left: 20px;"><i class="far fa-trash-alt incon"></i></i> Archive</a>
                         </div>
                     </div>
-                <!-- end manage menu -->
-
-                <!-- admin
-                <a href="#admin" class="dropdown-btn"><i class="fas fa-unlock-alt sidecon"></i> Administrator <i class="fas fa-angle-down"></i></a>
-                <div class="dropdown-container">
-                    <a href="#"  class="dropdown-btn"><i class="fas fa-users incon"></i> Users <i class="fas fa-angle-down"></i></a>
-                        <div class="dropdown-container">
-                            <a href="users.html" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                            <a href="adduser.html" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
-                        </div>
-                    <a href="#"><i class="fas fa-solar-panel incon"></i> Panel</a>
-                    <a href="generate.html"><i class="far fa-hdd incon"></i> Generate Backup</a>
-                </div> -->
-
-                <a href="/admin/" class="dropdown-btn"><i class="fas fa-unlock-alt sidecon"></i> Admin Panel</a>
+                {% if soft_auth != 'General User' %}
+                    <a href="/admin/" class="dropdown-btn"><i class="fas fa-unlock-alt sidecon"></i> Admin Panel</a>
+                {% endif %}
             </div>
 
         {% block content %}{% endblock content %}
