--- a/grams/templates/companies.html
+++ b/grams/templates/companies.html
@@ -22,7 +22,10 @@
           </ul>
     </div>
 
-    <a href="{% url 'company-add' %}" class="btn neutral">Add</a> <a href="{% url 'archive-company-table' %}" class="btn critical">Display Archive</a>
+    {% if soft_auth != 'General User' %}
+    <a href="{% url 'company-add' %}" class="btn neutral">Add</a>
+    {% endif %}
+    <a href="{% url 'archive-company-table' %}" class="btn critical">Display Archive</a>
 
     <div style="overflow-x:auto;"> 
         <table class="table table-striped" id="myTable"> 
