--- a/grams/templates/companyview.html
+++ b/grams/templates/companyview.html
@@ -122,6 +122,7 @@
 
 </section>
 
+{% if soft_auth != 'General User' %}
 <div class="footer">
         {% if company_view.display == '1' %}
         <a href="{% url 'company-edit' company_view.id %}" class="btn float-right neutral">Edit</a>
@@ -132,6 +133,6 @@
         <a href="{% url 'delete-company' company_view.id %}" class="btn float-right critical" onclick="return confirm('Are you sure you want to remove this company from the database?')">Delete</a>
     {% endif %}
 </div>
-
+{% endif %}
 
 {% endblock content %}
