--- a/grams/templates/vendorview.html
+++ b/grams/templates/vendorview.html
@@ -61,6 +61,7 @@
 
 </section>
 
+{% if soft_auth != 'General User' %}
 <div class="footer">
     {% if vendor_view.display == '1' %}
         <a href="{% url 'vendors-edit' vendor_view.id %}" class="btn float-right neutral">Edit</a>
@@ -71,6 +72,6 @@
         <a href="{% url 'delete-vendors' vendor_view.id %}" class="btn float-right critical" onclick="return confirm('Are you sure you want to remove this vendor from the database?')">Delete</a>
     {% endif %}
 </div>
-
+{% endif %}
 
 {% endblock content %}
