--- a/grams/templates/branchview.html
+++ b/grams/templates/branchview.html
@@ -83,15 +83,16 @@
 {% block js %}
     <script type="text/javascript">
         $(document).ready( function () {
-            $('#myTable').DataTable({
-                dom: 'Bfrtip',
-                buttons: [
+            $('#myTable').DataTable({            
+                "lengthChange": true,
+                "dom": 'Bfrtip',
+                "buttons": [
                     { extend: 'copy',  className: 'copy'},  
                     { extend: 'csv', className: 'csv'},  
                     { extend: 'excel', className: 'excel'},  
                     { extend: 'pdf',  className: 'pdf'},  
                     { extend: 'print', className: 'print'} 
-                ]
+                ],
             });
         } );
     </script>
