--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -12,6 +12,7 @@
         href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.18/af-2.3.0/b-1.5.2/b-colvis-1.5.2/b-flash-1.5.2/b-html5-1.5.2/b-print-1.5.2/cr-1.5.0/fh-3.1.4/r-2.2.2/datatables.min.css"/>
 {% endblock page_css %}
 {% block content %}
+{% load humanize %}
 <section id="main" class="content">
     <div class="titlepage">
         <ul class="breadcrumb">
@@ -52,6 +53,10 @@
                     <tr>
                         <td><b>Category</b></td>
                         <td>{{ asset_view.category }}</td>
+                    </tr>
+                    <tr>
+                        <td><b>Vendor</b></td>
+                        <td>{{ asset_view.vendor }}</td>
                     </tr>
                     <tr>
                         <td><b>Brand</b></td>
@@ -130,9 +135,9 @@
                     {% for value in dep_values %}
                         <tr>
                             <td>{{ value.0 }}</td>
-                            <td>{{ value.1|floatformat:'2' }}</td>
-                            <td>{{ value.2|floatformat:'2' }}</td>
-                            <td>{{ value.3|floatformat:'2' }}</td>
+                            <td>{{ value.1|floatformat:'2'|intcomma }}</td>
+                            <td>{{ value.2|floatformat:'2'|intcomma }}</td>
+                            <td>{{ value.3|floatformat:'2'|intcomma }}</td>
                         </tr>
                     {% endfor %}
                             
@@ -164,11 +169,11 @@
                     <table class="info-table" >
                         <tr>
                             <td><b>Acquisition Cost: </b></td>
-                            <td>Php {{ asset_view.acquisition_cost|floatformat:'2' }}</td>
+                            <td>Php {{ asset_view.acquisition_cost|floatformat:'2'|intcomma }}</td>
                         </tr>
                         <tr>
                             <td><b>Salvage Value: </b></td>
-                            <td>Php {{ asset_view.salvage_value|floatformat:'2' }}</td>
+                            <td>Php {{ asset_view.salvage_value|floatformat:'2'|intcomma }}</td>
                         </tr>
                         <tr>
                             <td><b>Projected Life: </b></td>
@@ -176,7 +181,7 @@
                         </tr>
                         <tr>
                             <td><b>Book Value: </b></td>
-                            <td>Php {{ asset_view.balance|floatformat:'2' }}<br/></td>
+                            <td>Php {{ asset_view.balance|floatformat:'2'|intcomma }}<br/></td>
                         </tr>
                     </table>
             </div>
