--- a/grams/templates/defective.html
+++ b/grams/templates/defective.html
@@ -17,7 +17,7 @@
 
         <div class="row">
             <div class="form-control tablebox-container">
-                <form method="POST" action="">
+                <form method="POST" id="transactionForm" assets-url="{% url 'ajax-assets' %}" novalidate>
                     {% csrf_token %}
                     {{ form|crispy }}
                     <input class="btn neutral" type="submit" value="Report Defective">
@@ -26,4 +26,22 @@
             </div>
         </div>
     </section>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script>
+        $("#id_archived_assets").change(function () {
+            var ajaxurl = $("#transactionForm").attr("assets-url");
+            var assetId = $(this).val();
+
+            $.ajax({
+                url: ajaxurl,
+                data: {
+                    'asset': assetId
+                },
+                success: function (data) {
+                    $("#id_archived_assets").html(data);
+                }
+            });
+        });
+    </script>
 {% endblock content %}
