--- a/grams/static/styles.css
+++ b/grams/static/styles.css
@@ -2,9 +2,9 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800');
 
-::-webkit-scrollbar {width: 5px;}
-::-webkit-scrollbar-track {background: #66BB6A;}
-::-webkit-scrollbar-thumb {background: #1B5E20;}
+/**::-webkit-scrollbar {width: 6px;}
+::-webkit-scrollbar-track {background: #EEEEEE;}
+::-webkit-scrollbar-thumb {background: #1B5E20;}**/
 
 *:focus {
     outline: 0 !important;
