--- a/grams/static/login.css
+++ b/grams/static/login.css
@@ -1,109 +1,106 @@
-.topspace {
-    margin-top: 10px;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800');
+
+html {
+    background: rgb(27,94,32);
+    background: linear-gradient(50deg, rgba(27,94,32,1) 52%, rgba(54,177,59,1) 100%);
+    height: 100%;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 13px;
+    height: 100%;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(27,94,32);
+    transition: 0.3s;
+}
+
+    a:hover {
+        border-bottom: 2px solid rgb(27,94,32);
+    }
+
+.bigbox {
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+
+.wrapper {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
 }
 
 .box {
-    margin: 10% auto;
-    width: 400px;
-    background-color: white;
-}
-
-
-/* Form */
-
-.login {
-    padding: 20px;
-    font-size: 16px;
-    width: 300px;
+    background: #fff;
+    width: initial;
+    width: 200px;
     margin: auto;
-    overflow: hidden;
+    padding: 30px;
+    border-radius: 10px;
+    transition: .3s;
 }
 
-    .login h1 {
-        text-align: center;
-        font-size: 3em;
-        font-weight: 900;
-        letter-spacing: 2px;
-        color: #1B5E20;
-    }
-
-    .login a {
-        color: #2E7D32;
-    }
-
-        .login a:hover {
-            color: #1B5E20;
-            text-decoration: none;
-        }
-
-    .login input {
-        font-size: 1em !important;
-        font-weight: 400;
-        padding: 3px;
-        margin-bottom: 10px;
-    }
-
-        .login input[type=text], input[type=password] {
-            border-radius: 0px;
-            background-color: transparent;
-            outline: none;
-            border: none;
-            border-bottom: 3px solid #E0E0E0;
-        }
-
-            .login input[type=text]:focus, input[type=password]:focus {
-                border-bottom: 3px solid #1B5E20;
-                background-color: transparent;
-                outline-style: none;
-                box-shadow: none;
-            }
-
-            .form-control:focus {
-                -webkit-box-shadow: none;
-                box-shadow: none;
-            }
-
-        .login input[type=submit] {
-            float: left;
-            max-width: 80px;
-            background-color: #43A047;
-            color: #ffffff;
-            border: none;
-            padding: 5px;
-            box-shadow: 0px 1px 3px -2px #616161;
-        }
-
-            .login input[type=submit]:hover {
-                background-color: #2E7D32;
-            }
-
-            .login input[type=submit]:focus {
-                background-color: #388E3C;
-                box-shadow: none;                
-            }
-
-
-/* Might be deleted */
-
-.addLink {
-    margin-top: 7px;
-    float: right;
-    font-size: 0.9em;
-    text-align: center;
-    text-transform: uppercase;
+form {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 13px;
 }
 
-
-/* For responsiveness */
-
-@media screen and (max-width: 1024px) {
-    /* Not sure sa max-width na 1024px */
-    .box {
-        width: 100%;
-    }
-
-    .login {
-        /*margin: 20% auto;*/
-        width: 100%;
-    }
+.asteriskField {
+    display: none;
 }
+
+.boxtitle {
+    color: rgb(27,94,32);
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+input {
+    outline: 0;
+    font-family: inherit;
+}
+
+label {
+    font-size: 0.7em;
+    color: rgb(190, 190, 190);
+}
+
+input[type=text], input[type=password] {
+    outline: 0;
+    padding: 5px 7px 5px 7px;
+    border-radius: 15px;
+    border: 1px solid rgb(190, 190, 190);
+    transition: 0.3s;
+    margin-bottom: 5px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+    input[type=text]:focus, input[type=password]:focus {
+        background: rgba(255, 255, 255);
+    }
+
+input[type=submit] {
+    margin-top: 15px;
+    outline: 0;
+    padding: 7px 18px 7px 18px;
+    border-radius: 20px;
+    color: #fff;
+    letter-spacing: 3px;
+    border: 1px solid #fff;
+    background: rgb(27,94,32);
+    background: linear-gradient(50deg, rgba(27,94,32,1) 52%, rgba(54,177,59,1) 100%);
+    transition: 0.3s;
+}
+
+    input[type=submit]:hover {
+        background: #fff;
+        border: 1px solid rgb(27,94,32);
+        color: rgb(27,94,32);
+        transition: 0.3s;
+    }
