--- a/grams/static/login.css
+++ b/grams/static/login.css
@@ -82,7 +82,7 @@ input[type=text], input[type=password] {
 }
 
     input[type=text]:focus, input[type=password]:focus {
-        background: rgba(255, 255, 255);
+        border: 1px solid rgb(27,94,32);
     }
 
 input[type=submit] {
